@@ -2,7 +2,7 @@
 
 bool DateTime::breakDown(TimeStruct *ts)
 {
-    time_t time = d_time + d_displayZone; // add local time (if available)
+    time_t time = d_time + d_displayZoneShift; // add local time (if available)
 
     return gmtime_r(&time, ts);
 }
