@@ -4,7 +4,7 @@ DateTime::DateTime(string const &timeStr,  TimeType type, int utcZoneShift)
 :
     d_type(type)
 {
-    initializeZones(0, utcZoneShift);
+    initializeTime(0, utcZoneShift);
     istringstream in(timeStr);
     parse(in);
 }
