@@ -1,0 +1,13 @@
+    #include <ctime>
+    #include <iostream>
+    #include <bobcat/datetime>
+
+    using namespace std;
+    using namespace FBB;
+
+    int main()
+    {
+        #include "erabody.cc"
+
+        return 0;
+    }
