@@ -3,6 +3,6 @@
 DateTime &DateTime::operator+=(time_t seconds)
 {
     d_time += seconds;
-    breakDown(d_type);
+    breakDown();
     return *this;
 }
