@@ -450,25 +450,6 @@ class em(has) changed though, requiring recompilation of sources defining
 tt(Process) class type objects and linking dynamically to the tt(Bobcat)
 library. 
 
-    The enumeration tt(enum Program) defined in earlier releases is now 
-replaced by tt(ProcessType). Both enumerations can be used interchangedly, but
-the tt(enum Program) will be removed in a future Bobcat release and should be
-considered obsolete. The member tt(setPath(Program type)) is now deprecated
-and tt(setProcessType) should be used instead. The member tt(setPath) will be
-removed in a future release.
-
-    The constructors tt(Process(std::string const &cmd, IOMode mode)) and
-tt(Process(size_t timeLimit, std::string const &cmd, IOMode mode)) are now
-deprecated and will be removed in a future release.
-
-    The members tt(wait()) and tt(void setWait(size_t timeLimit)) are now
-deprecated (and actually defunct). They will be removed in a future release.
-
-    The members tt(int start(Program program)) and tt(int start(size_t
-timeLimit, IOMode mode, Program program)) were withdrawn from tt(Process)'s
-interface. Their functionality is now provided by other overloaded tt(start())
-members.
-
 includefile(trailer.inc)
 
 
