@@ -1,6 +1,10 @@
-bobcat (1.22.1) (ISN)
+bobcat (2.01.1) (ISN)
 
-  * Repaired flaws in and extended the class DateTime 
+  * Repaired flaws in and extended/rebuilt the class DateTime. Consult its
+    man-page for the current API.
+
+  * Deprecated members from other classes (see bobcat's 1.21.1 changelog) 
+    were removed.
 
 bobcat (1.21.1)
 
